--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -45,3 +45,8 @@ body {
 .form-signin input[type="text"] {
   margin-bottom: 10px;
 }
+
+#borderDemo {
+border: 1px groove #DADADA ;
+background: rgba(240,240,240,0.66) url("") no-repeat scroll 0px 0px;
+}
