--- a/src/main/resources/templates/default.html
+++ b/src/main/resources/templates/default.html
@@ -16,8 +16,9 @@
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="jumbotron.css" rel="stylesheet">
+    <!-- Custom styles for this template 
+    <link href="jumbotron.css" rel="stylesheet">-->
+    <link href="/css/starter-template.css" rel="stylesheet">
   </head>
 
   <body>
@@ -39,36 +40,54 @@
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Disabled</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          <li class="nav-item dropdown" th:if="${userOnNavbar}">
+            <a class="nav-link dropdown-toggle"  id="dropdown01" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">Categories</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+            	
+          		<tr th:each="categories: ${categories}">
+				   
+				   
+				     <a class="dropdown-item"  th:text="${categories.name}" th:href="@{'/products/' + ${categories.id}}">Action</a>
+				</tr>
+			
             </div>
           </li>
+          
+         
            
                         
         </ul>
 
           <ul class="navbar-nav ml-auto">
-          			 <li> <a class="nav-link" th:text="${fullName}"></a></li>
+          			
           			<li> 
           			<form class="form-inline my-2 my-lg-0">
 			          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
 			       
 			       	  </form>
        				 </li>
-                    <li class="nav-item" th:if="${currentUser == null}"><a class="nav-link" th:href="@{/login}">Log in</a></li>
-                   
-                    <li class="nav-item" th:if="${currentUser}">
-                       <form th:action="@{/logout}" method="post">
-                           <input type="submit" value="Sign Out" class="btn btn-outline-success my-2 my-sm-0" /> 
-                        </form>
-                      
-                    </li>    
+       				 
+       				   <li class="nav-item dropdown" th:if="${userOnNavbar == null}"><a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" >Signup / Login</a>
+				        <ul class="dropdown-menu">
+				          <li><a href="/signup">Signup</a></li>
+				          <li><a href="/login">Login</a></li>
+				        </ul>
+				      </li>
+       				 
+       				 <li class="nav-item dropdown" th:if="${userOnNavbar}"><a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" th:text="${userOnNavbar.getFullname()}" ></a>
+       				 	  <ul class="dropdown-menu">
+					          <li><a href="/profile">Profile</a></li>
+					          <li><a href="/logout">Logout</a></li>
+					        </ul>
+					      </li>
+       				 
+       				 
+      
                        
                 </ul>
+                
+                
+                
                    
      
       </div>
@@ -96,7 +115,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="../../assets/js/vendor/popper.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="/css/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </body>
 </html>
