Created Algolia and mongo search. Cart entities

--- a/src/main/resources/templates/default.html
+++ b/src/main/resources/templates/default.html
@@ -2,117 +2,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       >
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
-
-    <title>Jumbotron Template for Bootstrap</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/">
-	<link rel="stylesheet" href="/css/style.css" />
-    <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template 
-    <link href="jumbotron.css" rel="stylesheet">-->
-    <link href="/css/starter-template.css" rel="stylesheet">
-  </head>
+  <head lang="en" th:replace="partials/header :: header"> </head>
 
   <body>
-
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-          <li class="nav-item dropdown" th:if="${userOnNavbar}">
-            <a class="nav-link dropdown-toggle"  id="dropdown01" data-toggle="dropdown" href="#" aria-haspopup="true" aria-expanded="false">Categories</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-          		<tr th:each="categories: ${categories}">
-				     <a class="dropdown-item"  th:text="${categories.name}" th:href="@{'/products/' + ${categories.id}}">Action</a>
-				</tr>
-			
-            </div>
-          </li>
-          
-         
-           
-                        
-        </ul>
-
-          <ul class="navbar-nav ml-auto">
-          			
-          			<li> 
-          			<form class="form-inline my-2 my-lg-0">
-			          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-			       
-			       	  </form>
-       				 </li>
-       				 
-       				   <li class="nav-item dropdown" th:if="${userOnNavbar == null}"><a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" >Signup / Login</a>
-				        <ul class="dropdown-menu">
-				          <li><a href="/signup">Signup</a></li>
-				          <li><a href="/login">Login</a></li>
-				        </ul>
-				      </li>
-       				 
-       				 <li class="nav-item dropdown" th:if="${userOnNavbar}"><a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" th:text="${userOnNavbar.getFullname()}" ></a>
-       				 	  <ul class="dropdown-menu">
-					          <li><a href="/profile">Profile</a></li>
-					          <li><a href="/logout">Logout</a></li>
-					        </ul>
-					      </li>
-       				 
-       				 
-      
-                       
-                </ul>
-                
-                
-                
-                   
-     
-      </div>
-    </nav>
-
-   
-
-      
-
-      <div class="container">
-            <div layout:fragment="content"></div>
-      </div>
-      <!-- /.container -->
-
-  
-
-    <div id="footer">
-	  <div class="container text-center">
-	    <p class="text-muted credit" style="color:#fff">© Company 2017-2018</p>
-	  </div>
-	</div>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-    <script src="/css/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  </body>
+		   <head lang="en" th:replace="partials/navbar :: navbar"> </head>
+		
+		      <div class="container">
+		            <div layout:fragment="content"></div>
+		      </div>
+		      <!-- /.container -->
+		
+		  <div lang="en" th:replace="partials/footer :: footer"> </div>
+		  <div lang="en" th:replace="partials/javascript :: javascript"> </div>
+    </body>
 </html>
