Created cart controller. Modified user user singnup to update cart id. Created plus and minus cart icon, created Angular controller for cart

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -19,3 +19,14 @@ body {
 #productsearchalign {
 	 margin : 0 auto;
 }
+
+#shoppingCart{
+	padding-top: 10px;
+	font-size:32px;
+	color:white
+}
+#shoppingCartTotal{
+	padding-top: 15px;
+	font-size:14px;
+	color:white
+}
