--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -4,9 +4,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
-
-    <title>Jumbotron Template for Bootstrap</title>
-
+	
+    <title>eCommerc application</title>
+    <script data-require="angular.js@*" data-semver="1.2.13" src="http://code.angularjs.org/1.2.13/angular.js"></script>
+    	<script src="/css/cartAngular.js"></script>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/">
 	<link rel="stylesheet" href="/css/style.css" />
 	<link rel="stylesheet" href="/css/search.css" />
