--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -7,13 +7,16 @@
 	
     <title>eCommerc application</title>
     <script data-require="angular.js@*" data-semver="1.2.13" src="http://code.angularjs.org/1.2.13/angular.js"></script>
-    	<script src="/css/cartAngular.js"></script>
+    <script src="/js/cartAngular.js"></script>
+    
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/jumbotron/">
 	<link rel="stylesheet" href="/css/style.css" />
 	<link rel="stylesheet" href="/css/search.css" />
 	<link rel="stylesheet" href="/css/custom.css" />
+	
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/alertify.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template 
     <link href="jumbotron.css" rel="stylesheet">-->
