--- a/src/main/resources/templates/dashboard-page.html
+++ b/src/main/resources/templates/dashboard-page.html
@@ -9,12 +9,11 @@
 <body>
 
 	<div layout:fragment="content">
-		<div class="jumbotron" id="navbar-gap">
-			
+		<div class="dashboardImage">
 				<h2 class="text-center" th:inline="text">
 					Hello [[${#httpServletRequest.remoteUser}]]!
 					</h1>
-					<h1 class="text-center">Find your favourite Product</h1>
+					<h1 class="text-center">Find your favorite Product</h1>
 					<p class="text-center">Search many of Ecommerce's products</p>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-10" id="productsearchalign">
@@ -31,6 +30,7 @@
 
 						</div>
 					</div>
+			
 			</div>
 	
 
