--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,9 +6,13 @@
     </head>
     <body>
         <div layout:fragment="content">
-            <h1>Welcome!</h1>
-
-        <p>Click <a th:href="@{/hello}">here</a> to see a greeting.</p>
+           
+         <div class="homeImage">
+		
+		
+        <h2>Register <a th:href="@{/hello}">here</a> to start shopping.</h2>
+        </div>
         </div>
     </body>
+    <br>
 </html>
