--- a/src/main/resources/templates/user/search-result.html
+++ b/src/main/resources/templates/user/search-result.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-       layout:decorate="~{default}">
-    <head>
-        <title>Login</title>
-    </head>
-    <div class="alert alert-danger" th:if="${#fields.hasErrors('*')}">
-    <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>    
-   </div>
-    <body class="text-center">
-        <div layout:fragment="content">
-       <!-- Implement condition to return message if product can not be found in database -->
-           <div class="container">
-           	<div class="row">
-	           	<tr th:each="search: ${search}">		
-		           	<div class="col-md-4">
-			           	
-			          	<a th:href="@{'/product/' + ${search.id}}">view</a>			   				   
-						
-							     
-							<div id="borderDemo" class="thumbnail"  >
-								<img class="img-thumbnail" th:src="${search.image}">
-									<div class="caption">
-									 <h3 th:text="${search.name}" />								
-									  <p>$ <span th:text="${search.price}"></span></p>
-									</div>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org" layout:decorate="~{default}">
+<head>
+<title>Login</title>
+</head>
+<div class="alert alert-danger" th:if="${#fields.hasErrors('*')}">
+	<p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
+</div>
+<body class="text-center">
+	<div layout:fragment="content">
+		<!-- Implement condition to return message if product can not be found in database -->
+		<div class="container">
+			<div class="row">
+				<tr th:each="search: ${search}">
+					<div class="col-md-4">
+
+						<div id="borderDemo" class="thumbnail">
+							<img th:href="@{'/product/' + ${search.id}}"
+								class="img-thumbnail" th:src="${search.image}">
+							<div class="caption">
+								<h3 th:text="${search.name}" />
+								<p>
+									$ <span th:text="${search.price}"></span>
+								</p>
 							</div>
-					 </div>		
-					</tr>
-	           	</div>
-           	</div>
-           </div>
-        
-    </body>
+						</div>
+					</div>
+				</tr>
+			</div>
+		</div>
+	</div>
+
+</body>
 </html>
