Html elements formated

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -35,7 +35,7 @@ border: 0 !important;
 }
 
 .dashboardImage {
-	background: url('/images/threely-photo.jpeg') no-repeat center center fixed;
+	background: url('/images/') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
