--- a/src/main/resources/templates/default.html
+++ b/src/main/resources/templates/default.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
+      xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
       >
   <head lang="en" th:replace="partials/header :: header"> </head>
 
