Fixed checkout button

--- a/src/main/resources/templates/partials/footer.html
+++ b/src/main/resources/templates/partials/footer.html
@@ -1,5 +1,5 @@
   <div id="footer" th:fragment="footer">
 	  <div class="container text-center">
-	    <p class="text-muted credit" style="color:#fff">© Company 2017-2018</p>
+	    <p class="text-muted credit" style="color:#fff">ï¿½ Company 2020</p>
 	  </div>
 	</div>
